@@ -1,0 +1,7 @@
+#!/bin/csh
+if( ! $?LD_LIBRARY_PATH ) then
+  setenv LD_LIBRARY_PATH @prefix@/lib
+else
+  setenv LD_LIBRARY_PATH ${LD_LIBRARY_PATH}:@prefix@/lib
+endif
+setenv PYTHIA8DATA ${PYTHIA8_HOME}/xmldoc
