@@ -1,0 +1,8 @@
+#!/bin/sh
+if [ ! $?LD_LIBRARY_PATH ]; then
+  export LD_LIBRARY_PATH=@prefix@/lib
+fi
+if [ $?LD_LIBRARY_PATH ]; then
+  export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:@prefix@/lib
+fi
+export PYTHIA8DATA=${PYTHIA8_HOME}/xmldoc
