@@ -1,0 +1,32 @@
+! File: main32.cmnd
+! This file contains commands to be read in for a Pythia8 run. 
+! Lines not beginning with a letter or digit are comments.
+! Names are case-insensitive  -  but spellings-sensitive!
+! The changes here are illustrative, not always physics-motivated.
+
+! 1) Settings that will be used in a main program.
+Main:numberOfEvents = 200          ! number of events to generate
+Main:timesToShow = 10              ! show how far along run is this many times
+Main:timesAllowErrors = 3         ! abort run after this many flawed events
+Main:showChangedSettings = on      ! print changed flags/modes/parameters
+#Main:showAllSettings = on          ! print all flags/modes/parameters
+Main:showChangedParticleData = on  ! print changed particle and decay data
+#Main:showAllParticleData = on      ! print all particle and decay data
+
+! 2) Beam parameter settings. Values below agree with default ones.
+Beams:idA = 2212                   ! first beam, p = 2212, pbar = -2212
+Beams:idB = 2212                   ! second beam, p = 2212, pbar = -2212
+Beams:eCM = 14000.                 ! CM energy of collision
+
+! 3) Pick processes and kinematics cuts.
+Charmonium:gg2QQbar[3S1(1)]g = on   ! colour singlet charmonium production
+Charmonium:gg2QQbar[3P0(1)]g = on   !  "
+Charmonium:gg2QQbar[3P1(1)]g = on   !  " 
+Charmonium:gg2QQbar[3P2(1)]g = on   !  "
+PhaseSpace:pTHatMin = 20.           ! minimum pT of hard process
+
+! 4) Alternative beam and process selection from a Les Houches Event File.
+! NOTE: to use this option, comment out the lines in section 3 above
+! and uncomment the ones below. Section 2 is ignored for frameType = 4.
+#Beams:frameType = 4                 ! read info from a LHEF
+#Beams:LHEF = ttbar.lhe              ! the LHEF to read from
